--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently \"npm run dev:renderer\" \"npm run dev:electron\" \"npm run dev:api\"",
     "dev:web": "concurrently -n \"app,api\" -c \"cyan,yellow\" \"npm run dev:renderer\" \"npm run dev:api\"",
     "dev:renderer": "vite",
-    "dev:electron": "tsc -p tsconfig.electron.json && wait-on http://localhost:5173 && electron .",
+    "dev:electron": "tsc -p tsconfig.electron.json && wait-on http://localhost:5173 && npx electron .",
     "dev:api": "node src/api-server.js",
     "build": "tsc -p tsconfig.electron.json && tsc && vite build && electron-builder",
     "test": "vitest",
